--- a/Objects/51smartcar.build_log.htm
+++ b/Objects/51smartcar.build_log.htm
@@ -19,18 +19,19 @@ CPU DLL:         S8051.DLL V3.125.1.0
 Dialog DLL:      DP51.DLL V2.69.0.0 
 <h2>Project:</h2>
 C:\Users\linxiyue\Documents\GitHub\51smartcar\51smartcar.uvproj
-Project File Date:  12/11/2024
+Project File Date:  12/17/2024
 
 <h2>Output:</h2>
 Build target 'Target 1'
-compiling main.c...
 linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?_CAR_BACK?CAR_GO
-Program Size: data=14.0 xdata=0 code=719
+    SEGMENT: ?PR?_CAR_TURN_R?CAR_GO
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?ULTRASOUND?ULTRASOUND
+Program Size: data=20.0 xdata=0 code=1909
 creating hex file from ".\Objects\51smartcar"...
-".\Objects\51smartcar" - 0 Error(s), 1 Warning(s).
-Build Time Elapsed:  00:00:01
+".\Objects\51smartcar" - 0 Error(s), 2 Warning(s).
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
