--- a/Objects/51smartcar.build_log.htm
+++ b/Objects/51smartcar.build_log.htm
@@ -23,12 +23,13 @@ Project File Date:  12/17/2024
 
 <h2>Output:</h2>
 Build target 'Target 1'
+compiling main.c...
 linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_CAR_TURN_R?CAR_GO
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?ULTRASOUND?ULTRASOUND
-Program Size: data=20.0 xdata=0 code=1909
+Program Size: data=20.0 xdata=0 code=1922
 creating hex file from ".\Objects\51smartcar"...
 ".\Objects\51smartcar" - 0 Error(s), 2 Warning(s).
 Build Time Elapsed:  00:00:00
