--- a/Objects/51smartcar.build_log.htm
+++ b/Objects/51smartcar.build_log.htm
@@ -22,17 +22,26 @@ C:\Users\linxiyue\Documents\GitHub\51smartcar\51smartcar.uvproj
 Project File Date:  12/17/2024
 
 <h2>Output:</h2>
-Build target 'Target 1'
+Rebuild target 'Target 1'
+compiling car_go.c...
 compiling main.c...
+compiling motor.c...
+compiling pwm.c...
+compiling trace.c...
+compiling Delay_ms.c...
+compiling bluetooth.c...
+compiling Delay_us.c...
+compiling servo.c...
+compiling ultrasound.c...
 linking...
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?_CAR_TURN_R?CAR_GO
 *** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
     SEGMENT: ?PR?ULTRASOUND?ULTRASOUND
-Program Size: data=20.0 xdata=0 code=1922
+Program Size: data=20.0 xdata=0 code=1925
 creating hex file from ".\Objects\51smartcar"...
 ".\Objects\51smartcar" - 0 Error(s), 2 Warning(s).
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
